--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body
 {
 	overflow-x: hidden;
+
 }
 
 .section1
@@ -38,9 +39,9 @@ a:hover
 
 #aboutme
 {
-	height: 100vh;
+	height: 100h;
 	align-items: center;
-	padding: 0 10%;
+	margin-bottom: 10rem;
 }
 
 .btn
@@ -58,6 +59,52 @@ li
 
 #section
 {
-	height: 100vh;
-	margin-top: 10rem;
+	height: 60vh;
+
 }
+#home{
+	background-color: black;
+	color: white;
+}
+#image1{
+	border-radius: 35% 65% 49% 51% / 73% 49% 51% 27%;
+
+
+}
+
+textarea
+{
+	height: 500px;
+	width: 500px;
+}
+
+input[type=text], select, textarea {
+	width: 100%;
+	padding: 10px;
+	border: 1px solid white;
+	border-radius: 4px;
+	box-sizing: border-box;
+	margin-top: 6px;
+	margin-bottom: 16px;
+	resize: vertical;
+  }
+  
+  input[type=submit] {
+	background-color: #04AA6D;
+	color: white;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+	background-color: #45a049;
+  }
+  
+  .container1 {
+	border-radius: 5px;
+	background-color: whitesmoke;
+	padding: 20px;
+	text-align: center;
+  }
