--- a/index.css
+++ b/index.css
@@ -1,110 +1,131 @@
-body
-{
-	overflow-x: hidden;
 
+body {
+   background-color: whitesmoke;
 }
-
-.section1
-{
- align-items: center;
+#navid{
+	position: sticky;
 }
-#h3size
-{
-	font-size: 50px;
-}
-#h2size
-{
-	font-size: 30px;
-
-}
-a
-{
-	text-decoration: none;
-	color: black;
-}
-a:hover
-{
-	color: rgb(252, 93, 93);
-}
-
-#home
-{
-
-	height:100vh;
-	align-items: center;
-	padding: 0 10%;
-}
-
-
-
-#aboutme
-{
-	height: 100h;
-	align-items: center;
-	margin-bottom: 10rem;
-}
-
-.btn
-{
-	margin-right: 10px;
-	border-radius: 80px;
-	padding: 15px;
-	margin-top:10px;
-}
-
-li
-{
-	list-style: none;
-}
-
-#section
-{
-	height: 60vh;
-
-}
-#home{
-	background-color: black;
-	color: white;
+body {
+	font-family: Montserrat;
 }
 #image1{
-	border-radius: 35% 65% 49% 51% / 73% 49% 51% 27%;
-
+	height: 250px;
+	width: 300px;
+	margin-top: 50px;
 
 }
 
-textarea
+
+p{
+	color: black;
+	font-weight: bold;
+	letter-spacing: 2px;
+	font-size: ;
+}
+h4{
+	color: red;
+	font-size: 40px;
+}
+img{
+	width: 250px;
+
+}
+
+nav a:hover
 {
-	height: 500px;
-	width: 500px;
+text-decoration: underline;
+
+}
+#body_font
+{
+	font-size: 12;
+}
+li
+{
+list-style: none;	
+}
+#container1
+{
+	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;}
+#projects
+{
+	margin-bottom: 50px;
+}
+#Tools
+{
+	margin-bottom: 50px;
 }
 
-input[type=text], select, textarea {
-	width: 100%;
-	padding: 10px;
-	border: 1px solid white;
-	border-radius: 4px;
-	box-sizing: border-box;
-	margin-top: 6px;
-	margin-bottom: 16px;
-	resize: vertical;
-  }
+button
+{
+	margin-top: 20px;
+	padding: 12px 16px;
+	border-radius: 20px;
+	
+}
+
+
+
+.wrapper.one {
+    background-color: transparent;
+}
+.drop-main {
+    display: flex;
+    font-size: 4rem;
   
-  input[type=submit] {
-	background-color: #04AA6D;
-	color: white;
-	padding: 12px 20px;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-  }
+    justify-content: center;
+    font-family: "Russo One", sans-serif;
+}
+.j {
+    opacity: 0;
+    animation: drop 0.4s linear forwards;
+ 
+}
+.o {
+    opacity: 0;
+    animation: drop 0.4s linear forwards 0.2s;
   
-  input[type=submit]:hover {
-	background-color: #45a049;
-  }
+}
+.s {
+    opacity: 0;
+    animation: drop 0.4s linear forwards 0.4s;
   
-  .container1 {
-	border-radius: 5px;
-	background-color: whitesmoke;
-	padding: 20px;
-	text-align: center;
-  }
+}
+.h {
+    opacity: 0;
+    animation: drop 0.4s linear forwards 0.6s;
+   
+}
+.u {
+    opacity: 0;
+    animation: drop 0.4s linear forwards 0.8s;
+   
+	
+}
+.a {
+    opacity: 0;
+    animation: drop 0.4s linear forwards 0.8s;
+    
+}
+@keyframes drop {
+    0% {
+        transform: translateY(-200px);
+        opacity: 0;
+    }
+    50% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    65% {
+        transform: translateY(-17px);
+        opacity: 1;
+    }
+    75% {
+        transform: translateY(-22px);
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
