--- a/shopping/index.css
+++ b/shopping/index.css
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	font-family: Montserrat;
-	background-image: url(background.jpg);
+
 }
 nav ul
 {
@@ -19,7 +19,7 @@ nav a
 {
 background: transparent;
 text-decoration: none;
-color: white;
+color: black;
 }
 nav a:hover
 {
@@ -28,4 +28,51 @@ nav a:hover
 }
 nav{
 	background: transparent;
+	margin-top: 30px;
+	position: sticky;
+
+}
+
+#Home
+{
+	
+	background-image:   
+	linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(15, 14, 15, 0.73)),
+    url(./images/2.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+
+
+}
+#home_div
+{
+	display: inline-block;  
+	height: 100vh;
+	align-content: center;
+}
+#home_div h1
+{
+color: white;
+font-size: 85px;
+margin-left: 100px;
+}
+#home_div p
+{
+color: white;
+font-size: 15px;
+margin-left: 100px;
+}
+
+#menu_div
+{
+	display: inline-block;  
+	height: 100vh;
+
+	align-content: center;
+}
+#menu_div h1
+{
+	color: black;
+	font-size: 85px;
+	margin-left: 100px;
 }
