--- a/shopping/index.css
+++ b/shopping/index.css
@@ -24,7 +24,7 @@ color: black;
 nav a:hover
 {
 	text-decoration: underline;
-	color: white;
+	color: black;
 }
 nav{
 	background: transparent;
@@ -55,7 +55,9 @@ nav{
 color: white;
 font-size: 85px;
 margin-left: 100px;
+font-family: Sedan;
 }
+
 #home_div p
 {
 color: white;
@@ -63,16 +65,101 @@ font-size: 15px;
 margin-left: 100px;
 }
 
+
 #menu_div
 {
 	display: inline-block;  
-	height: 100vh;
+	
+	margin-top: 10px;
 
-	align-content: center;
 }
 #menu_div h1
 {
 	color: black;
 	font-size: 85px;
 	margin-left: 100px;
+}
+#menu_h4 
+{
+	font-family: Grey Qo;
+	font-size: 100px;
+}
+#desert_id 
+{
+	font-family: Grey Qo;
+	font-size: 100px;
+}
+
+img{
+	width: 250px;
+    height: 250px;
+    border-radius: 8px;
+}
+
+
+
+#desert_div
+{
+	display: inline-block;  
+	
+	margin-top: 10px;
+
+}
+#desert_div h1
+{
+	color: black;
+	font-size: 85px;
+	margin-left: 100px;
+}
+#desert_h4 
+{
+	font-family: Grey Qo;
+	font-size: 100px;
+}
+#desert_id 
+{
+	font-family: Grey Qo;
+	font-size: 100px;
+}
+
+img{
+	width: 280px;
+    height: 250px;
+    border-radius: 8px;
+}
+
+
+h3:hover
+{
+	color: brown;
+	text-decoration: underline;
+
+}
+.example
+{
+ 	
+	margin-bottom: 20px;
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.row#ekek {
+    display: flex;
+    gap: 4%; 
+}
+
+.row#ekek > .example {
+    flex: 6 12 30.33%;
+}
+/* Responsive Styles for Smaller Screens */
+@media (max-width: 320px) {
+    .row#ekek > .example {
+        flex: 6 12 100%; /* Full width for smallest screens */
+        margin-bottom: 20px; /* Additional margin for spacing */
+    }
+}
+@media (max-width: 576px) {
+    .row#ekek > .example {
+        flex: 0 0 100%; /* Full width for one column */
+   		margin-right: 50px;
+    }
 }
