--- a/shopping/index.css
+++ b/shopping/index.css
@@ -33,7 +33,7 @@ nav{
 
 }
 
-#Home
+#e
 {
 	
 	background-image:   
@@ -44,6 +44,7 @@ nav{
 
 
 }
+
 #home_div
 {
 	display: inline-block;  
@@ -194,3 +195,7 @@ h6
 	font-family: Grey Qo;
 	font-size: 100px;
 }
+
+
+
+
